--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,10 +25,11 @@ set(CMAKE_CXX_STANDARD 17)
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCOMMON_DEBUG_TRACE")
 
 # Source files
+#  
 set(SYMBIOS_COMMON_SRC ${CMAKE_SOURCE_DIR}/include/symbios/common/data_structure.h ${CMAKE_SOURCE_DIR}/include/symbios/common/configuration_manager.h ${CMAKE_SOURCE_DIR}/src/symbios/common/data_structure.cpp ${CMAKE_SOURCE_DIR}/common/src/common/debug.cpp
-        ${CMAKE_SOURCE_DIR}/common/include/common/debug.h ${CMAKE_SOURCE_DIR}/common/include/common/replayer.h ${CMAKE_SOURCE_DIR}/common/include/common/arguments.h)
-set(SYMBIOS_LIB_SRC ${SYMBIOS_COMMON_SRC} include/symbios/client/client.h src/symbios/client/client.cpp
-        src/symbios/client/posix.cpp include/symbios/client/posix.h)
+        ${CMAKE_SOURCE_DIR}/common/include/common/debug.h ${CMAKE_SOURCE_DIR}/common/include/common/arguments.h)
+
+set(SYMBIOS_LIB_SRC ${SYMBIOS_COMMON_SRC} src/symbios/client/client.cpp include/symbios/client/client.h src/symbios/client/posix.cpp include/symbios/client/posix.h)
 
 # add symbios lib
 add_library(symbios SHARED ${SYMBIOS_LIB_SRC})
@@ -51,6 +52,8 @@ set(SYMBIOS_SERVER_SRC ${SYMBIOS_COMMON_SRC}
         ${CMAKE_SOURCE_DIR}/src/symbios/data_distribution/round_robin_dde.h ${CMAKE_SOURCE_DIR}/src/symbios/data_distribution/round_robin_dde.cpp
         ${CMAKE_SOURCE_DIR}/src/symbios/metadata_orchestrator/metadata_orchestrator.h ${CMAKE_SOURCE_DIR}/src/symbios/metadata_orchestrator/metadata_orchestrator.cpp
         ${CMAKE_SOURCE_DIR}/src/symbios/server/daemon.h)
+
+set(SYMBIOS_TEST_SRC ${CMAKE_SOURCE_DIR}/common/src/common/iris.cpp ${CMAKE_SOURCE_DIR}/common/include/common/iris.h ${CMAKE_SOURCE_DIR}/common/include/common/replayer.h)
 
 add_library(symbios_server_lib SHARED ${SYMBIOS_SERVER_SRC})
 add_dependencies(symbios_server_lib symbios)
