--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -94,12 +94,15 @@ endforeach()
 set(test_files iris_emu)
 foreach (test_file ${test_files})
     set(exec unit_${test_file})
-    add_executable(${exec}  ${test_file}/test.cpp ${test_file}/iris.cpp ${SYMBIOS_SERVER_SRC})
+    add_executable(${exec} ${test_file}/test.cpp ${SYMBIOS_TEST_SRC} ${SYMBIOS_SERVER_SRC})
     add_dependencies(${exec} symbios)
+    add_dependencies(${exec} symbios_server_lib)
     target_include_directories(${exec} PRIVATE "${CMAKE_BINARY_DIR}/")
+    target_link_libraries(${exec} symbios_server_lib)
     target_link_libraries(${exec} ${IRIS_LIBS})
     target_link_libraries(${exec} symbios)
-    #set_target_properties(${exec} PROPERTIES FOLDER test/unit)
+
+    set_target_properties(${exec} PROPERTIES FOLDER test/unit)
     set(test_parameters )
     set(test_name ${test_file}_test)
     add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/unit/${exec} ${test_parameters})
