--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -82,7 +82,7 @@ set(MODEL_FILE ${CMAKE_BINARY_DIR}/test_data.csv)
 add_executable(unit_storage_cost_predictor storage_cost_predictor/test.cpp)
 target_link_libraries(unit_storage_cost_predictor symbios_server_lib)
 target_link_libraries(unit_storage_cost_predictor ${LIBS})
-set_target_properties(unit_storage_cost_predictor PROPERTIES COMPILE_FLAGS "-O3 -ffast-math")
+#set_target_properties(unit_storage_cost_predictor PROPERTIES COMPILE_FLAGS "-O3 -ffast-math")
 foreach(NREQS ${NREQS_LIST})
     foreach(NPROCS ${NPROCS_LIST})
         add_test(NAME sc_predictor_${NREQS}_${NPROCS} COMMAND
