--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -90,7 +90,6 @@ foreach(NREQS ${NREQS_LIST})
     endforeach()
 endforeach()
 
-
 set(test_files iris_emu)
 foreach (test_file ${test_files})
     set(exec unit_${test_file})
@@ -105,9 +104,6 @@ foreach (test_file ${test_files})
     set_target_properties(${exec} PROPERTIES FOLDER test/unit)
     set(test_parameters )
     set(test_name ${test_file}_test)
-    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/unit/${exec} ${test_parameters})
+    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/unit/${exec} ${test_parameters} ~/symbios.conf "TEST" file ${CMAKE_BINARY_DIR}/Testing/Temporary/iris_emu_test.log 2)
     set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
-    set_property(TEST ${test_name} APPEND PROPERTY ENVIRONMENT "LD_PRELOAD=${CMAKE_BINARY_DIR}/ares/datasets/libdatasets.so")
-    set_property(TEST ${test_name} APPEND PROPERTY ENVIRONMENT "HDF5_PLUGIN_PATH=$ENV{HDF5_PLUGIN_PATH}")
-    set_property(TEST ${test_name} APPEND PROPERTY ENVIRONMENT "RUN_DIR=$ENV{RUN_DIR}")
 endforeach ()
