Got WRF test working, made CM1 Kmeans test a no-op while we figure out how to resolve an issue with the traces

--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -38,7 +38,7 @@ foreach (test_file ${test_files})
     target_link_libraries(${exec} symbios)
     set_target_properties(${exec} PROPERTIES FOLDER test/integration)
     set(test_name ${test_file}_test)
-    set(test_parameters -r 1 -m POSIX -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
+    set(test_parameters -r 1 -m IRIS -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
     add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
     set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
 endforeach ()
