--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -104,6 +104,6 @@ foreach (test_file ${test_files})
     set_target_properties(${exec} PROPERTIES FOLDER test/unit)
     set(test_parameters )
     set(test_name ${test_file}_test)
-    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/unit/${exec} ${test_parameters} ~/symbios.conf "TEST" file ${CMAKE_BINARY_DIR}/Testing/Temporary/iris_emu_test.log 2)
+    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/unit/${exec} ${test_parameters} ~/symbios.conf "LOREM IPSUM DOLOR SIT AMET" file ${CMAKE_BINARY_DIR}/Testing/Temporary/iris_emu_test.log 2)
     set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
 endforeach ()
