--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(symbios VERSION 1.0.0 DESCRIPTION "Symbios")
 set(INSTALL_DIR $ENV{INSTALL_DIR})
 #string(REPLACE ":" "/;" MODULE_LIST $ENV{PATH})
 #string(REPLACE ":" "/;" MODULE_LIB_LIST $ENV{LD_LIBRARY_PATH})
-#message(install_dir: ${INSTALL_DIR})
+message(install_dir: ${INSTALL_DIR})
 #message(module_lsit ${MODULE_LIST})
 #message(module_lib_list ${MODULE_LIB_LIST})
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
