--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -37,8 +37,34 @@ foreach (test_file ${test_files})
     target_link_libraries(${exec} ${IRIS_LIBS})
     target_link_libraries(${exec} symbios)
     set_target_properties(${exec} PROPERTIES FOLDER test/integration)
-    set(test_name ${test_file}_test)
-    set(test_parameters -r 1 -m IRIS -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
+
+    set(test_name ${test_file}_iris_pfs_test)
+    set(test_parameters -r 1 -m IRIS -s FILE -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
+    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
+    set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
+
+    set(test_name ${test_file}_iris_mongo_test)
+    set(test_parameters -r 1 -m IRIS -s MONGO -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
+    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
+    set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
+
+    set(test_name ${test_file}_iris_redis_test)
+    set(test_parameters -r 1 -m IRIS -s REDIS -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
+    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
+    set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
+
+    set(test_name ${test_file}_symbios_pfs_test)
+    set(test_parameters -r 1 -m SYMBIOS -s FILE -f "~/symbios.conf" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
+    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
+    set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
+
+    set(test_name ${test_file}_symbios_mongo_test)
+    set(test_parameters -r 1 -m SYMBIOS -s MONGO -f "symbios.conf" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
+    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
+    set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
+
+    set(test_name ${test_file}_symbios_redis_test)
+    set(test_parameters -r 1 -m SYMBIOS -s REDIS -f "symbios.conf" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
     add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
     set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
 endforeach ()
