Revert "Created Tests for WRF and CM1 Kmeans"

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -89,20 +89,23 @@ foreach(NREQS ${NREQS_LIST})
     endforeach()
 endforeach()
 
+
 set(test_files iris_emu)
 foreach (test_file ${test_files})
     set(exec unit_${test_file})
-    add_executable(${exec} ${test_file}/test.cpp ${SYMBIOS_TEST_SRC} ${SYMBIOS_SERVER_SRC})
+    add_executable(${exec}  ${test_file}/test.cpp ${test_file}/iris.cpp)
     add_dependencies(${exec} symbios)
     add_dependencies(${exec} symbios_server_lib)
-    target_include_directories(${exec} PRIVATE "${CMAKE_BINARY_DIR}/")
     target_link_libraries(${exec} symbios_server_lib)
+    target_include_directories(${exec} PRIVATE "${CMAKE_BINARY_DIR}/")
     target_link_libraries(${exec} ${IRIS_LIBS})
     target_link_libraries(${exec} symbios)
-
-    set_target_properties(${exec} PROPERTIES FOLDER test/unit)
+    #set_target_properties(${exec} PROPERTIES FOLDER test/unit)
     set(test_parameters )
     set(test_name ${test_file}_test)
-    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/unit/${exec} ${test_parameters} ~/symbios.conf "LOREM IPSUM DOLOR SIT AMET" file ${CMAKE_BINARY_DIR}/Testing/Temporary/iris_emu_test.log 2)
+    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/unit/${exec} ${test_parameters})
     set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
+    set_property(TEST ${test_name} APPEND PROPERTY ENVIRONMENT "LD_PRELOAD=${CMAKE_BINARY_DIR}/ares/datasets/libdatasets.so")
+    set_property(TEST ${test_name} APPEND PROPERTY ENVIRONMENT "HDF5_PLUGIN_PATH=$ENV{HDF5_PLUGIN_PATH}")
+    set_property(TEST ${test_name} APPEND PROPERTY ENVIRONMENT "RUN_DIR=$ENV{RUN_DIR}")
 endforeach ()
