--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,12 @@ project(symbios VERSION 1.0.0 DESCRIPTION "Symbios")
 set(INSTALL_DIR $ENV{INSTALL_DIR})
 #string(REPLACE ":" "/;" MODULE_LIST $ENV{PATH})
 #string(REPLACE ":" "/;" MODULE_LIB_LIST $ENV{LD_LIBRARY_PATH})
-message(install_dir: ${INSTALL_DIR})
+#message(install_dir: ${INSTALL_DIR})
 #message(module_lsit ${MODULE_LIST})
 #message(module_lib_list ${MODULE_LIB_LIST})
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DH5_HAVE_DIRECT -w -g -DBASKET_ENABLE_RPCLIB")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DH5_HAVE_DIRECT -w -DBASKET_ENABLE_RPCLIB")
 set(INCLUDE_DIRS "-I${INSTALL_DIR}/include/ -L${INSTALL_DIR}/lib/") #-L${PROJECT_SOURCE_DIR}/build/hcl/ -I${PROJECT_SOURCE_DIR}/hcl/include/") # -I${MODULE_LIST} -L${MODULE_LIB_LIST}")# -DRPCLIB_ENABLE_LOGGING -DRPCLIB_ASIO=clmdep_asio -DRPCLIB_FMT=clmdep_fmt")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${INCLUDE_DIRS}")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${INCLUDE_DIRS}")
@@ -31,11 +31,10 @@ set(CMAKE_CXX_STANDARD 17)
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCOMMON_DEBUG_TRACE")
 
 # Source files
-#  
 set(SYMBIOS_COMMON_SRC ${CMAKE_SOURCE_DIR}/include/symbios/common/data_structure.h ${CMAKE_SOURCE_DIR}/include/symbios/common/configuration_manager.h ${CMAKE_SOURCE_DIR}/src/symbios/common/data_structure.cpp ${CMAKE_SOURCE_DIR}/common/src/common/debug.cpp
         ${CMAKE_SOURCE_DIR}/common/include/common/debug.h ${CMAKE_SOURCE_DIR}/common/include/common/arguments.h)
-
-set(SYMBIOS_LIB_SRC ${SYMBIOS_COMMON_SRC} src/symbios/client/client.cpp include/symbios/client/client.h src/symbios/client/posix.cpp include/symbios/client/posix.h)
+set(SYMBIOS_LIB_SRC ${SYMBIOS_COMMON_SRC} include/symbios/client/client.h src/symbios/client/client.cpp
+        src/symbios/client/posix.cpp include/symbios/client/posix.h)
 
 # add symbios lib
 add_library(symbios SHARED ${SYMBIOS_LIB_SRC})
@@ -65,8 +64,6 @@ set(SYMBIOS_SERVER_SRC ${SYMBIOS_COMMON_SRC}
         ${CMAKE_SOURCE_DIR}/src/symbios/data_distribution/round_robin_dde.h ${CMAKE_SOURCE_DIR}/src/symbios/data_distribution/round_robin_dde.cpp
         ${CMAKE_SOURCE_DIR}/src/symbios/metadata_orchestrator/metadata_orchestrator.h ${CMAKE_SOURCE_DIR}/src/symbios/metadata_orchestrator/metadata_orchestrator.cpp
         ${CMAKE_SOURCE_DIR}/src/symbios/server/daemon.h)
-
-set(SYMBIOS_TEST_SRC ${CMAKE_SOURCE_DIR}/common/src/common/iris.cpp ${CMAKE_SOURCE_DIR}/common/include/common/iris.h ${CMAKE_SOURCE_DIR}/common/include/common/replayer.h)
 
 add_library(symbios_server_lib SHARED ${SYMBIOS_SERVER_SRC})
 add_dependencies(symbios_server_lib symbios)
