--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -5,7 +5,6 @@ set(CMAKE_CXX_STANDARD 17)
 
 
 #set(LIBS -L${INSTALL_DIR}/lib64 -L${INSTALL_DIR}/lib -L${INSTALL_DIR}/lib -lmpi   -lpthread -ldl  -lhiredis -lbasket -lrpc -lredis++ -lmongoc-1.0 -lbson-1.0 -lbsoncxx -lboost_system -lboost_filesystem  -lmongocxx -lpthread)
-set(IRIS_LIBS -L${INSTALL_DIR}/lib64 -L${INSTALL_DIR}/lib -L${INSTALL_DIR}/lib -lopenblas  -ldlib -lgfortran -lm -lquadmath -lpthread -lm -lmpi -lhiredis -lbasket -lrpc -lredis++ -lmongoc-1.0 -lbson-1.0 -lbsoncxx -lboost_system -lboost_filesystem  -lmongocxx -lpthread -ldl)
 include_directories(${CMAKE_SOURCE_DIR})
 set(CTEST_ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/")
 set($ENV{LD_PRELOAD} "$ENV{LD_PRELOAD} ${CMAKE_BINARY_DIR}")
@@ -27,44 +26,15 @@ endforeach ()
 set(test_files cm1_kmeans wrf)
 foreach (test_file ${test_files})
     set(exec ${test_file})
-    file(COPY apps/${test_file}/traces_${exec}
-        DESTINATION ${CMAKE_BINARY_DIR}/test/integration)
-    add_executable(${exec} apps/${test_file}/test.cpp ${SYMBIOS_TEST_SRC} ${SYMBIOS_SERVER_SRC})
+    add_executable(${exec} apps/${test_file}/test.cpp)
     add_dependencies(${exec} symbios)
     add_dependencies(${exec} symbios_server_lib)
-    target_include_directories(${exec} PRIVATE "${CMAKE_BINARY_DIR}/")
     target_link_libraries(${exec} symbios_server_lib)
-    target_link_libraries(${exec} ${IRIS_LIBS})
+    target_include_directories(${exec} PRIVATE "${CMAKE_BINARY_DIR}/")
+    target_link_libraries(${exec} ${LIBS})
     target_link_libraries(${exec} symbios)
     set_target_properties(${exec} PROPERTIES FOLDER test/integration)
-
-    set(test_name ${test_file}_iris_pfs_test)
-    set(test_parameters -r 1 -m IRIS -s FILE -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
-    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
-    set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
-
-    set(test_name ${test_file}_iris_mongo_test)
-    set(test_parameters -r 1 -m IRIS -s MONGO -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
-    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
-    set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
-
-    set(test_name ${test_file}_iris_redis_test)
-    set(test_parameters -r 1 -m IRIS -s REDIS -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
-    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
-    set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
-
-    set(test_name ${test_file}_symbios_pfs_test)
-    set(test_parameters -r 1 -m SYMBIOS -s FILE -f "~/symbios.conf" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
-    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
-    set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
-
-    set(test_name ${test_file}_symbios_mongo_test)
-    set(test_parameters -r 1 -m SYMBIOS -s MONGO -f "symbios.conf" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
-    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
-    set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
-
-    set(test_name ${test_file}_symbios_redis_test)
-    set(test_parameters -r 1 -m SYMBIOS -s REDIS -f "symbios.conf" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
+    set(test_name ${test_file}_test)
     add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
     set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
 endforeach ()
