CM1 Kmeans and WRF tests working for all file-based cases

--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -39,32 +39,32 @@ foreach (test_file ${test_files})
     set_target_properties(${exec} PROPERTIES FOLDER test/integration)
 
     set(test_name ${test_file}_iris_pfs_test)
-    set(test_parameters -r 1 -m IRIS -s FILE -f "" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
+    set(test_parameters -r 1 -m IRIS -s FILE -f "test" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
     add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
     set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
 
     set(test_name ${test_file}_iris_mongo_test)
-    set(test_parameters -r 1 -m IRIS -s MONGO -f "" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
+    set(test_parameters -r 1 -m IRIS -s MONGO -f "test" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
     add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
     set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
 
     set(test_name ${test_file}_iris_redis_test)
-    set(test_parameters -r 1 -m IRIS -s REDIS -f "" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
+    set(test_parameters -r 1 -m IRIS -s REDIS -f "test" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
     add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
     set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
 
     set(test_name ${test_file}_symbios_pfs_test)
-    set(test_parameters -r 1 -m SYMBIOS -s FILE -f "~/symbios.conf" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
+    set(test_parameters -r 1 -m SYMBIOS -s FILE -f "$ENV{HOME}/symbios.conf" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
     add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
     set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
 
     set(test_name ${test_file}_symbios_mongo_test)
-    set(test_parameters -r 1 -m SYMBIOS -s MONGO -f "~/symbios.conf" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
+    set(test_parameters -r 1 -m SYMBIOS -s MONGO -f "$ENV{HOME}/symbios.conf" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
     add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
     set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
 
     set(test_name ${test_file}_symbios_redis_test)
-    set(test_parameters -r 1 -m SYMBIOS -s REDIS -f "~/symbios.conf" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
+    set(test_parameters -r 1 -m SYMBIOS -s REDIS -f "$ENV{HOME}/symbios.conf" -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary -c 4096)
     add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
     set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
 endforeach ()
